# fyp-autonomous-bot

./: README.md  README.md~
ROS catkin_ws/: default.rviz  nav.rviz  navCam.rviz
ROS catkin_ws/pointrecorder/: CMakeLists.txt  CMakeLists.txt~  package.xml
ROS catkin_ws/ptserver/: CMakeLists.txt
ROS catkin_ws/robot/: hmapping.launch  intNav.launch  mapping.launch  move.launch  nav.launch  navIMU.launch  navIMUcam.launch  navIMUcamMux.launch  navP2P.launch  package.xml  ptRecord.launch  ptserver.launch
ROS catkin_ws/robot_config/: package.xml
ROS catkin_ws/yocs_velocity_smoother/: CMakeCache.txt
ROS%20catkin_ws/robot/: navIMUcamMux.launch
ROS%20catkin_ws/robot_stats/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
axis_camera/launch/: axis.launch  axis_gscam.launch
diff_drive_controller/src/: base_controller.cpp  base_controller.cpp~  base_pose.cpp  base_pose.cpp~
include/base_pose/: .base_pose.hpp.swp  base_pose.hpp
include/basic_twist_integrator/: .basic_twist_integrator.hpp.swp
pointrecorder/: CMakeLists.txt  package.xml
pointrecorder/src/: pointrecorder.cpp
ptserver/: CMakeLists.txt  go_to_specific_point_on_map.py  go_to_specific_point_on_map.py~  intialpose.py  intialpose.py~  package.xml  package.xml~
robot/: CMakeLists.txt  move.launch  nav.launch
robot_config/: CMakeLists.txt
robot_core/: CMakeLists.txt  README.md  package.xml
robot_odom_subs/: CMakeLists.txt  CMakeLists.txt~  package.xml
robot_pose_publisher/: CMakeLists.txt~
src/: base_pose.cpp
teleop_twist_joy/: CMakeLists.txt  CMakeLists.txt~  package.xml
(+71 files in other folders)
